Fixed overflowing divs not scrolling
Also removed compiled css file

--- a/public/scss/_connected-page.scss
+++ b/public/scss/_connected-page.scss
@@ -1,4 +1,6 @@
 #connected-page {
+  overflow: hidden;
+
   .main-section:first-child > main {
     margin: 0;
     display: flex;
