--- a/public/scss/_general.scss
+++ b/public/scss/_general.scss
@@ -1,3 +1,5 @@
+$shadow-length: 2rem;
+
 :root {
   --main-color: #d14f4b;
 }
@@ -25,6 +27,7 @@ body {
   background-color: #fff;
   min-height: 100%;
   height: 100%;
+  overflow: hidden;
 
   > header,
   > footer {
@@ -48,7 +51,7 @@ body {
     display: flex;
     height: 70%;
     width: 80%;
-    overflow: auto;
+    overflow: hidden;
 
     > div {
       flex: 1;
@@ -80,12 +83,16 @@ a:hover {
   margin-left: auto;
 }
 
+body > main > div {
+  padding: $shadow-length / 2;
+}
+
 .main-section {
   display: flex;
   flex-direction: column;
   // border: 3px solid var(--main-color);
   border: 1px solid rgba(0, 0, 0, 0.125);
-  box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 $shadow-length 0 rgba(0, 0, 0, 0.1);
   margin: 5px;
   flex: 1 1 0;
   overflow: hidden;
@@ -115,6 +122,7 @@ a:hover {
     flex-direction: column;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
   }
 
   .main-section > header {
