--- a/public/scss/_login-page.scss
+++ b/public/scss/_login-page.scss
@@ -1,16 +1,21 @@
+$shadow-spread: 2rem;
+
 #login-page {
   justify-content: center;
   flex-direction: row;
   height: auto;
+  overflow: hidden;
+  padding: $shadow-spread / 2;
 
   section.main-section {
     font-size: 1.4rem;
     justify-content: center;
     flex: 0 1 auto;
-    box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 $shadow-spread 0 rgba(0, 0, 0, 0.1);
     padding: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.8em;
+    overflow: auto;
   }
 
   span {
